# harreither-brain-client

./: .gitignore  protocol-notes.md  pyproject.toml
src/harreither_brain_client/: __init__.py  cli.py  connection.py  data.py  establish_connection.py  message.py  traverse_screens.py
