[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harreither-brain-client"
version = "0.1.0"
description = "Client and CLI for Harreither Brain devices"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = ""Harreither Brain Client Contributors" }]
dependencies = [
    "websockets>=12.0",
    "cryptography>=41.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
keywords = ["harreither", "client"]

[project.urls]
Homepage = "https://example.com/harreither-brain-client"
Repository = "https://example.com/harreither-brain-client"

[project.scripts]
harreither-brain = "harreither_brain_client.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
